MainWindow.cpp: Bugfix #240, Fixes VLMC crashes on Mac when switched from fullscreen to normal window mode. Because of a bug in Qt 4.7.x for mac, we're required to turn off UnifiedTitleAndToolbarOnMac before making MainWindow fullscreen and re-enable it when toggling to normal window. For more information pl. refer: https://bugreports.qt.nokia.com//browse/QTBUG-16274